--- a/.github/workflows/main1.yml
+++ b/.github/workflows/main1.yml
@@ -39,10 +39,10 @@ jobs:
           province: ${{secrets.province}} 
           city: ${{secrets.city}} 
           region: ${{secrets.region}} 
-          stuIDs: ${{secrets.b_stuIDs}} 
-          provinces: ${{secrets.b_provinces}} 
-          citys: ${{secrets.b_citys}} 
-          regions: ${{secrets.b_regions}} 
+          stuIDs: ${{secrets.a_stuIDs}} 
+          provinces: ${{secrets.a_provinces}} 
+          citys: ${{secrets.a_citys}} 
+          regions: ${{secrets.a_regions}} 
         run: |
           sudo cp -p ./chrome/chromedriver /usr/bin/
           chmod -R 777 /usr/bin/chromedriver
