--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,7 @@ jobs:
           API_KEY:  ${{secrets.API_KEY}} 
           stuID: ${{secrets.stuID}} 
           stuIDs: ${{secrets.a_stuIDs}} 
+          names: ${{secrets.a_names}} 
         run: |
           sudo cp -p ./chrome/chromedriver /usr/bin/
           chmod -R 777 /usr/bin/chromedriver
