--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,10 @@
-# This is a basic workflow to help you get started with Actions
 
 name: selenium
 
 # Controls when the action will run.
 on:
   schedule:
-    - cron: '*/10 16-23 * * *'
+    - cron: '10,18,26,40,54 16-23 * * *'
   workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -29,15 +28,14 @@ jobs:
       - name: 'Set up Python'
         uses: actions/setup-python@v1
         with:
-           python-version: 3.7
+          python-version: 3.7
       - name: 'Install requirements'
         run: pip install -r ./Spider/requirements.txt
       - name: 'Working'
         env:
-          API_KEY:  ${{secrets.API_KEY}} 
-          stuID: ${{secrets.stuID}} 
-          stuIDs: ${{secrets.a_stuIDs}} 
-          names: ${{secrets.a_names}} 
+          students: ${{secrets.students}}
+          API_KEY: ${{secrets.API_KEY}}
+          check: ${{secrets.check}}
         run: |
           sudo cp -p ./chrome/chromedriver /usr/bin/
           chmod -R 777 /usr/bin/chromedriver
