--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,8 @@ jobs:
         run: |
           sudo cp -p ./chrome/chromedriver /usr/bin/
           chmod -R 777 /usr/bin/chromedriver
-          python -m pip install typing_extensions
           python -m pip install --upgrade pip
           python -m pip install pytz requests datetime
+          python -m pip install typing_extensions
+          python -m pip install packaging
           python ./Spider/izhicheng.py
